--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,14 +4,13 @@
   margin: 0;
 }
 
-/*merged body and p declarations into 1 block*/
 body {
   background-color: #d9dcd6;
   font-size: 16px;
 }
 
+/* Header section*/
 header {
-  /* Changed selector. Reordered declarations. This adds blue color to header */
   padding: 20px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
@@ -28,8 +27,8 @@ header h1 .seo {
   color: #d9dcd6;
 }
 
+/* This block floats Nav bar to the right*/
 header nav {
-  /* Changed selector. Floated Nav bar to the right. removed li bullets*/
   padding-top: 15px;
   margin-right: 20px;
   float: right;
@@ -48,11 +47,12 @@ a {
   text-decoration: none;
 }
 
-figure img {
-  /*Resizes and positions the HERO banner under nav*/
+/*Resizes and positions the HERO banner under nav*/
+figure {
   height: 800px;
   width: 100%;
   margin-bottom: 25px;
+  background-image: url("../images/digital-marketing-meeting.jpg");
   background-size: cover;
   background-position: center;
 }
@@ -63,9 +63,8 @@ main {
   margin-left: 20px;
 }
 
+/* services "Main" section */
 .company-services {
-  /*Consolidated into a single class declaration to apply to all services*/
-  /*changed the selector to match ID label*/
   margin-bottom: 20px;
   padding: 50px;
   height: 300px;
@@ -75,13 +74,11 @@ main {
 }
 
 section.company-services img {
-  /* consolidated  declaration to a single tag instead of 3 */
   max-height: 200px;
 }
 
 /* Reordered declaration block to match html */
 .company-services h2 {
-  /*consolidated 3 separte declarations into a single block using classes*/
   margin-bottom: 20px;
   font-size: 36px;
 }
@@ -95,8 +92,9 @@ section.company-services img {
   float: right;
   margin-left: 25px;
 }
+
+/*Sidebar*/
 aside {
-  /*replaced the selector for element */
   margin-right: 20px;
   padding: 20px;
   clear: both;
