--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ a {
   text-decoration: none;
 }
 
-/*Resizes and positions the HERO banner under nav*/
+/*This block resizes and positions the HERO banner under nav*/
 figure {
   height: 800px;
   width: 100%;
@@ -57,13 +57,14 @@ figure {
   background-position: center;
 }
 
+/* services "Main" section */
+/* Used a single new class for all sections inside main*/
 main {
   width: 75%;
   display: inline-block;
   margin-left: 20px;
 }
 
-/* services "Main" section */
 .company-services {
   margin-bottom: 20px;
   padding: 50px;
@@ -94,6 +95,7 @@ section.company-services img {
 }
 
 /*Sidebar*/
+/*Used a single new class for all sections inside aside */
 aside {
   margin-right: 20px;
   padding: 20px;
@@ -106,26 +108,23 @@ aside {
 }
 
 .benefits {
-  /*consolidated 3 separte declarations into a single block using classes*/
   margin-bottom: 32px;
   color: #ffffff;
 }
 
 .benefits h3 {
-  /*consolidated 3 separte declarations into a single block using classes*/
   margin-bottom: 10px;
   text-align: center;
 }
 
 .benefits img {
-  /*consolidated 3 separte declarations into a single block using classes*/
   display: block;
   margin: 10px auto;
   max-width: 150px;
 }
 
+/* Fixed the selector for the footer element*/
 footer {
-  /* Fixed the selector for the footer tag*/
   padding: 30px;
   clear: both;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
@@ -133,7 +132,7 @@ footer {
   text-align: center;
 }
 
+/*Fixed the heading selector*/
 footer h4 {
-  /*Fixed the selector*/
   font-size: 20px;
 }
