--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,13 +5,12 @@
 }
 
 body {
-  /*merged body and p declarations into 1 block*/
   background-color: #d9dcd6;
   font-size: 16px;
 }
 
-body > header {
-  /* adds blue color to header */
+/* Header section*/
+header {
   padding: 20px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
@@ -19,17 +18,17 @@ body > header {
   color: #ffffff;
 }
 
-body > header > h1 {
+header h1 {
   display: inline-block;
   font-size: 48px;
 }
 
-body > header > h1 .seo {
+header h1 .seo {
   color: #d9dcd6;
 }
 
-body > header > nav {
-  /* Floated Nav bar to the right. removed li bullets*/
+/* This block floats Nav bar to the right*/
+header nav {
   padding-top: 15px;
   margin-right: 20px;
   float: right;
@@ -38,7 +37,7 @@ body > header > nav {
   list-style-type: none;
 }
 
-header > nav > ul > li {
+header nav ul li {
   display: inline-block;
   margin-left: 25px;
 }
@@ -48,30 +47,25 @@ a {
   text-decoration: none;
 }
 
-body > figure > img {
-  /*Resizes and positions the HERO banner under nav*/
+/*This block resizes and positions the HERO banner under nav*/
+figure {
   height: 800px;
   width: 100%;
   margin-bottom: 25px;
+  background-image: url("../images/digital-marketing-meeting.jpg");
   background-size: cover;
   background-position: center;
 }
 
-body > main {
+/* services "Main" section */
+/* Used a single new class for all sections inside main*/
+main {
   width: 75%;
   display: inline-block;
   margin-left: 20px;
 }
 
-.company-services h2 {
-  /*consolidated 3 separte declarations into a single block using classes*/
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-
 .company-services {
-  /*Consolidated into a single class declaration to apply to all services*/
-  /*changed the selector to match ID label*/
   margin-bottom: 20px;
   padding: 50px;
   height: 300px;
@@ -80,9 +74,14 @@ body > main {
   color: #ffffff;
 }
 
-section.company-services > img {
-  /* consolidated  declaration to a single tag instead of 3 */
+section.company-services img {
   max-height: 200px;
+}
+
+/* Reordered declaration block to match html */
+.company-services h2 {
+  margin-bottom: 20px;
+  font-size: 36px;
 }
 
 .float-left {
@@ -94,8 +93,10 @@ section.company-services > img {
   float: right;
   margin-left: 25px;
 }
+
+/*Sidebar*/
+/*Used a single new class for all sections inside aside */
 aside {
-  /*replaced the selector for element */
   margin-right: 20px;
   padding: 20px;
   clear: both;
@@ -107,26 +108,23 @@ aside {
 }
 
 .benefits {
-  /*consolidated 3 separte declarations into a single block using classes*/
   margin-bottom: 32px;
   color: #ffffff;
 }
 
-.benefits > h3 {
-  /*consolidated 3 separte declarations into a single block using classes*/
+.benefits h3 {
   margin-bottom: 10px;
   text-align: center;
 }
 
-.benefits > img {
-  /*consolidated 3 separte declarations into a single block using classes*/
+.benefits img {
   display: block;
   margin: 10px auto;
   max-width: 150px;
 }
 
+/* Fixed the selector for the footer element*/
 footer {
-  /* Fixed the selector for the footer tag*/
   padding: 30px;
   clear: both;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
@@ -134,7 +132,7 @@ footer {
   text-align: center;
 }
 
-footer > h4 {
-  /*Fixed the selector*/
+/*Fixed the heading selector*/
+footer h4 {
   font-size: 20px;
 }
